# fahrtenbuch

./: .gitignore  docker-compose.yml  readme.md
.github/workflows/: package.yml
data/: data.db
fahrtenbuch-server/: .gitignore  Cargo.toml  Dockerfile  data.db
fahrtenbuch-server/migrations/: 20240220121118_init.sql
fahrtenbuch-server/src/: app.rs  main.rs  response.rs  username.rs  utils.rs
fahrtenbuch-server/src/api/: add_expense.rs  add_trip.rs  list_expenses.rs  list_trips.rs  list_users.rs  mod.rs  summary.rs  trip.rs  update_expense.rs  update_trip.rs
fahrtenbuch-server/src/api/schema/: mod.rs
fahrtenbuch-server/src/auth/: backend.rs  login.rs  logout.rs  mod.rs  register.rs
frontend/: Caddyfile  Dockerfile  README.md  pubspec.yaml  run.sh
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: api.dart  api_widget.dart  constants.dart  hyper_text.dart  main.dart  month_selector.dart  utils.dart
frontend/lib/pages/: expense_form.dart  expenses_viewer.dart  home.dart  login.dart  material_table.dart  trip_form.dart  trips_viewer.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
